# rust-projects

./: README.md
bits/src/: main.rs
digital-clock/: Cargo.toml
digital-clock/src/: main.rs
funcs/src/: main.rs
stm32-dev/: DEPENDENCIES.MD
stm32-dev/stm32h7-intro/: Cargo.toml
stm32-dev/stm32h7-intro/build-notes/: flash.sh
