[package]
name = "stm32h7-intro"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m={ version="0.7.4", features = ["critical-section-single-core"] }
cortex-m-rt="0.7.1"
stm32h7xx-hal = { version = "0.16.0", features = ["stm32h753v", "rt"] }
embedded-hal="0.2.6"
nb="1.0.0"
defmt="0.3.1"
defmt-rtt="0.4.0"
panic-probe={version = "0.3.0", features = ["print-defmt"] }
cortex-m-rtic="1.0.0"

